--- a/style.css
+++ b/style.css
@@ -24,12 +24,18 @@
 }
 /* #endregion SQUARE 2 */
 
-
+/* #region SQUARE 3 */
 .ex-3-square {
     width: 100px;
     height: 100px;
     background: red;
+    transition: all 1s;
 }
+
+.ex-3-square:hover{
+    border-radius: 50%;
+}
+/* #endregion SQUARE 3 */
 
 .ex-4-square {
     width: 100px;
