--- a/style.css
+++ b/style.css
@@ -123,7 +123,29 @@
 /* #region SQUARE 10*/
 .ex-10-icon {
     font-size: 60px;
+    animation: rotate linear 3s infinite;
 }
+
+@keyframes rotate {
+
+    25% {
+        rotate: 90deg;
+    }
+
+    50% {
+        rotate: 180deg;
+    }
+
+    75% {
+        rotate: 240deg;
+    }
+
+    100% {
+        rotate: 360deg;
+    }
+}
+
+/* #endregion SQUARE 10*/
 
 .ex-11-icon {
     font-size: 60px;
