add transition ex-13

--- a/style.css
+++ b/style.css
@@ -197,29 +197,14 @@
     background: #f5f5f5;
     width: 60px;
     height: 20px;
-
-}
-
-@keyframes whitetop {
-    25% {
-        left: 10%;
-    }
-
-    50% {
-        left: 30%;
-    }
-
-    75% {
-        left: 60%;
-    }
-
-    100% {
-        left: 10%;
-    }
 }
 
 .ex-12-button:hover .ex-12-top-white {
-    animation: whitetop 3s linear infinite;
+    animation: whitetop 2s linear infinite;
+}
+
+.ex-13-button:hover .ex-13-top-white {
+    animation: whitetopfull 3s linear infinite;
 }
 
 .ex-12-bottom-white,
@@ -232,16 +217,35 @@
     height: 20px;
 }
 
+.ex-12-button:hover .ex-12-bottom-white {
+    animation: whitebottom 2s linear infinite;
+}
+
+.ex-13-button:hover .ex-13-bottom-white {
+    animation: whitebottomfull 3s linear infinite;
+}
+
+/* keyframes ex 12-13 */
+@keyframes whitetop {
+    0% {
+        left: 10%;
+    }
+
+    50% {
+        left: 60%;
+    }
+
+    100% {
+        left: 10%;
+    }
+}
+
 @keyframes whitebottom {
-    25% {
+    0% {
         right: 20%;
     }
 
     50% {
-        right: 40%;
-    }
-
-    75% {
         right: 60%;
     }
 
@@ -250,12 +254,58 @@
     }
 }
 
-.ex-12-button:hover .ex-12-bottom-white {
-    animation: whitebottom 3s linear infinite;
+@keyframes whitetopfull {
+    0% {
+        left: 10%;
+        top: -10px;
+    }
+
+    25% {
+        left: 90%;
+        top: -10px;
+    }
+
+    50% {
+        left: 90%;
+        top: 90%;
+    }
+
+    75% {
+        left: -10px;
+        top: 90%;
+    }
+
+    100% {
+        left: -10px;
+        top: -10px;
+    }
 }
 
+@keyframes whitebottomfull {
+    0% {
+        right: 20%;
+        bottom: -10px;
+    }
 
+    25% {
+        right: 80%;
+        bottom: -10px;
+    }
 
+    50% {
+        right: 80%;
+        bottom: 90%;
+    }
 
+    75% {
+        right: -10px;
+        bottom: 90%;
+    }
+
+    100% {
+        right: -10px;
+        bottom: -10px;
+    }
+}
 
 /* #endregion SQUARE 12 13*/
